# ez-ffmpeg

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
docs/: cli_mapping.md
examples/: cli_emitted_audio_extract.rs  cli_emitted_clip.rs  cli_emitted_hls.rs  cli_emitted_scale.rs  cli_emitted_thumbnail.rs  cli_emitted_transcode.rs
examples/ai_media_ingest/: README.md  main.rs
examples/async/: Cargo.toml
examples/bouncing_balls/: README.md  main.rs
examples/builtin_effects/: Cargo.toml  README.md
examples/builtin_effects/src/: main.rs
examples/capture_camera_mic/: main.rs
examples/color_policy_comparison/: README.md  main.rs
examples/custom_input_output/: main.rs
examples/custom_tile_filter/: tile_filter.rs
examples/custom_volume_filter/: volume_filter.rs
examples/detect_streaming/: README.md  main.rs
examples/extract_rgb_frames/: README.md  main.rs
examples/extract_whisper_pcm/: README.md  main.rs
examples/fps_modification/: main.rs
examples/frame_sampling/: README.md  main.rs
examples/frames_to_video/: README.md  main.rs
examples/gif_export/: README.md  main.rs
examples/gpu_benchmark/: Cargo.toml
examples/gpu_benchmark/src/: main.rs
examples/gpu_filters/: Cargo.toml  README.md
examples/gpu_filters/src/: main.rs
examples/hardware_acceleration/: main.rs
examples/hls_abr_ladder/: README.md  main.rs
examples/in_memory_mp4/: README.md  main.rs
examples/keyframe_thumbnails/: README.md  main.rs
examples/media_analysis/: README.md  main.rs
examples/packet_scanner/: README.md  main.rs
examples/packet_sink_aac_channel/: README.md  main.rs
examples/packet_sink_av_transport/: README.md  main.rs
examples/packet_sink_avc/: README.md  main.rs
examples/processing_progress/: progress_filter.rs
examples/rtmp_streaming/: Cargo.toml  README.md
examples/rtmp_streaming/src/: main.rs
examples/split_video_to_wav/: main.rs
examples/still_video_from_image/: main.rs
examples/subtitle_burn_in/: Cargo.toml
examples/subtitle_burn_in/src/: main.rs
examples/thumbnail_extraction/: README.md  main.rs
examples/thumbnail_recipe/: README.md  main.rs
examples/uniform_thumbnails/: README.md  main.rs
examples/video_effects/: Cargo.toml  README.md
examples/video_effects/src/: main.rs
examples/wgpu_effects/: Cargo.toml  README.md
examples/wgpu_effects/shaders/: adjust.wgsl  chroma_shift.wgsl  grayscale.wgsl  vignette.wgsl  zoom_pulse.wgsl
examples/wgpu_effects/src/: main.rs
src/: error.rs  lib.rs
src/core/: capabilities.rs  codec.rs  container_info.rs  display.rs  hwaccel.rs  mod.rs  packet_scanner.rs  stream_info.rs
src/core/analysis/: detector.rs  event.rs  filter.rs  mod.rs  report.rs  runner.rs
src/core/cli/: corpus_tests.rs  emit.rs  error.rs  golden_tests.rs  ir.rs  lower.rs  manifest.rs  mod.rs  parse.rs  strict_tests.rs  table.rs  tokenize.rs
src/core/context/: attachment.rs  decoder_stream.rs  demuxer.rs  encoder_stream.rs  ffmpeg_context.rs  ffmpeg_context_builder.rs  filter_complex.rs  filter_graph.rs  frame_source.rs  input.rs  input_filter.rs  mod.rs  muxer.rs  null_output.rs  obj_pool.rs  output.rs  output_filter.rs  pre_mux_queue.rs
src/core/device/: avdevice.rs  macos_avfoundation.rs
src/core/filter/: frame_filter.rs  frame_pipeline.rs  frame_pipeline_builder.rs  mod.rs
src/core/frame_export/: audio.rs  audio_iter.rs  audio_options.rs  audio_resolve.rs  audio_sink.rs  chunk.rs  color_goldens.rs  error.rs  frame.rs  guard.rs  iter.rs  mod.rs  options.rs  resolve.rs  sampler.rs  selector.rs  sink.rs  video.rs
src/core/metadata/: default_behavior.rs  metadata_type.rs  mod.rs  stream_specifier.rs
src/core/packet_sink/: avcc.rs  mod.rs  nal_framing.rs  side_data.rs  strict.rs  timeline.rs
src/core/recipes/: gif.rs  hls.rs  hls_master.rs  mod.rs  thumbnail.rs
src/core/scheduler/: dec_task.rs  demux_task.rs  enc_task.rs  ffmpeg_scheduler.rs  filter_task.rs  frame_filter_pipeline.rs  frame_source_task.rs  input_controller.rs  mod.rs  mux_task.rs  owned_run_iter.rs  packet_sink_wedge_tests.rs  sync_queue.rs
src/core/writer/: mod.rs
src/flv/: flv_buffer.rs  flv_tag.rs  flv_tag_body.rs  mod.rs
src/opengl/: error.rs  mod.rs  opengl_frame_filter.rs
src/raw/: bit_stream_filter.rs  filter_graph.rs  filter_inout.rs  format_context.rs  mod.rs  subtitle.rs
src/rtmp/: embed_rtmp_server.rs  gop.rs  poller.rs  reactor.rs  rtmp_scheduler.rs  write_queue.rs
src/subtitle/: backend.rs  bench_kernels.rs  blend.rs  filter.rs  layout.rs  loader.rs  mod.rs  options.rs  source.rs  test_util.rs
src/subtitle/ass/: drawing.rs  fields.rs  mod.rs  parser.rs  tags.rs  types.rs  value.rs
src/subtitle/blend/: avx2.rs  neon.rs
src/subtitle/render/: fonts.rs  layout.rs  (+4 more)
src/util/: ffmpeg_utils.rs  format_convert.rs  frame_utils.rs  mod.rs  sch_waiter.rs  thread_synchronizer.rs
src/wgpu_filter/: error.rs  frame_io.rs  gpu_state.rs  hw_interop.rs  mod.rs  params.rs  shaders.rs  tests.rs  wgpu_frame_filter.rs
tests/: attachment.rs  avoption_warnings.rs  bsf.rs  build_probe.rs  build_side_effects.rs  builder_option_validation.rs  cli_emit_hardening.rs  cli_goldens.rs  cross_graph_binding.rs  custom_io_hardening.rs  data_stream_passthrough.rs  decode_error_recovery.rs  decoder_opts_test.rs  enc_open_parity.rs  filter_hardening.rs  force_key_frames.rs  frame_export_audio_test.rs  frame_export_test.rs  frame_export_uniform_test.rs  frame_pipeline_hardening.rs  hls_fmp4.rs  lifecycle.rs  log_noise.rs  mux_teardown.rs  packet_sink.rs  packet_sink_negative.rs  packet_sink_teardown.rs  packet_sink_unwind.rs  per_output_video_filter.rs  rawvideo_seek_gating.rs  rtmp_loopback.rs  scheduler_ports.rs  shortest.rs  start_failure_join.rs  start_panic_unwind.rs  stream_selection.rs  streamcopy_deadlock.rs  subtitle_chain.rs  sws_swr_tuning.rs  tail_frame_integrity.rs  (+3 more)
tests/common/: mod.rs
(+37 files in other folders)
