[package]
name = "ez-ffmpeg"
version = "0.10.0"
edition = "2021"
authors = ["Yeauty <YeautyYE@gmail.com>"]
description = "A safe and ergonomic Rust interface for FFmpeg integration, designed for ease of use."
homepage = "https://github.com/YeautyYE/ez-ffmpeg"
documentation = "https://docs.rs/ez-ffmpeg"
readme = "README.md"
keywords = [
    "ffmpeg",
    "multimedia",
    "video",
    "audio",
    "rtmp",
]
categories = ["multimedia"]
license = "MIT OR Apache-2.0 OR MPL-2.0"
repository = "https://github.com/YeautyYE/ez-ffmpeg"

[dependencies]
log = "0.4"
thiserror = "1.0"
ffmpeg-next = "7.1.0"
ffmpeg-sys-next = "7.1.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
libc = "0.2.159"

#opengl
surfman = { version = "0.9", features = ["chains"], optional = true }
glow = { version = "0.16", optional = true }
bytemuck = { version = "1.8", optional = true }

#wgpu
wgpu = { version = "26", optional = true }
pollster = { version = "0.4", optional = true }
# Raw Vulkan for zero-copy hardware-frame import (dmabuf). Must stay on the
# same major as wgpu-hal 26's ash, since raw handles cross that boundary.
ash = { version = "0.38", optional = true }

#flv
bytes = { version = "1.9.0", optional = true }

#rtmp
rml_rtmp = { version = "0.8", optional = true }
slab = { version = "0.4", optional = true }
dashmap = { version = "6", optional = true }
byteorder = { version = "1.5", optional = true }
fontdb = { version = "0.23.0", optional = true }
ttf-parser = { version = "0.25.1", optional = true }
rustybuzz = { version = "0.20.1", optional = true }
zeno = { version = "0.3.3", optional = true }
unicode-bidi = { version = "0.3.18", optional = true }
unicode-linebreak = { version = "0.1.5", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-foundation = "0.10"

[features]
default = []
async = []
opengl = ["dep:surfman", "dep:glow", "dep:bytemuck"]
wgpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck", "dep:ash"]
rtmp = ["dep:rml_rtmp", "dep:slab", "dep:dashmap", "flv"]
flv = ["dep:bytes", "dep:byteorder"]
subtitle = [
    "dep:fontdb",
    "dep:ttf-parser",
    "dep:rustybuzz",
    "dep:zeno",
    "dep:unicode-bidi",
    "dep:unicode-linebreak",
]
static = ["ffmpeg-next/static"]
docs-rs = ["async", "opengl", "rtmp", "flv", "subtitle"]

[package.metadata.docs.rs]
features = ["docs-rs"]

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
